Fix double scrollbar by removing fixed height components

--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,10 +1,9 @@
 /* TODO: check if all style is used with the new interface */
 .dndflow {
   flex-wrap: wrap;
-  margin-top: 80px;
+  padding-top: 10px;
   padding-left: 5px;
   overflow: scroll;
-  height: 90vh;
   scrollbar-width: thin;
 }
 
